# little_squid

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  save.rs  todo.txt
src/cli/: config.rs  mod.rs  opts.rs  summaries.rs
src/export/: export.rs  fields.rs  mod.rs
src/fetcher/: fetcher.rs  mod.rs
src/progress/: progress.rs  stats.rs
src/utils/: Cargo.toml
src/utils/src/: archive.rs  lib.rs  utils.rs
