[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = "1.12.0"
crossterm = "0.27.0"
graphql_client = "0.13.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
struct_iterable = "0.1.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
